fix relation visibility on add

--- a/src/scss/block/dataview/cell.scss
+++ b/src/scss/block/dataview/cell.scss
@@ -99,6 +99,7 @@
 	.icon.user { margin-right: 5px; }
 }
 
+.cellContent.canEdit.c-title, 
 .cellContent.canEdit.c-description, 
 .cellContent.canEdit.c-date, 
 .cellContent.canEdit.c-object, 
